# gtimeutils

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  PKGBUILD  README.md  configure.ac  gstopwatch.c  gtimer.c
data/: Makefile.am  gstopwatch.desktop  gstopwatch.desktop.in  gtimer.desktop  gtimer.desktop.in
po/: ChangeLog  LINGUAS  POTFILES.in  nl.po
src/: Makefile.am  Makefile.in  gstopwatch.c  gtimer.c
